--- a/views/item.ejs
+++ b/views/item.ejs
@@ -194,7 +194,9 @@
 
       </div>
       <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-      <script src="index.js" charset="utf-8"></script>
+      <script type="text/javascript" src="/javascripts/item.js">
+
+      </script>
 
 
     </div>
@@ -209,5 +211,5 @@
 
 
 </body>
-
+<%- include("footer")-%>
 </html>
