--- a/views/home.ejs
+++ b/views/home.ejs
@@ -87,8 +87,7 @@
         <div class="signup">
           <form action = "/register" method="POST" >
             <label for="chk" aria-hidden="true" class="login-label">Sign up</label>
-            <input type="text" name="name" placeholder="User name" required="" class="login-input">
-            <input type="email" name="email" placeholder="Email" required="" class="login-input">
+            <input type="email" name="username" placeholder="Email" required="" class="login-input">
             <input type="password" name="password" placeholder="Password" required="" class="login-input">
             <button type="submit" class="hover-button">Sign up</button>
           </form>
@@ -97,7 +96,7 @@
         <div class="login">
           <form action = "/login" method = "POST">
             <label for="chk" aria-hidden="true" class="login-label">Login</label>
-            <input type="email" name="email" placeholder="Email" required="" class="login-input">
+            <input type="email" name="username" placeholder="Email" required="" class="login-input">
             <input type="password" name="password" placeholder="Password" required="" class="login-input">
             <button type="submit" class="hover-button">Login</button>
           </form>
