--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -43,7 +43,7 @@
 
       <div class="col-lg-2" style="z-index:1;>
         <a href=" #" style="z-index:1;margin-top:2rem;"><button type="button" class="btn1 nav-btn"><i class="fas fa-shopping-cart " style="margin-right:10px"></i>Cart</button></a>
-        <a href=" #" style="z-index:1;margin-top:2rem;"><button type="button" class="btn1 nav-btn"><i class="fas fa-sign-out-alt" style="margin-right:10px"></i>Logout</button></a>
+        <a href="/logout" style="z-index:1;margin-top:2rem;"><button type="button" class="btn1 nav-btn"><i class="fas fa-sign-out-alt" style="margin-right:10px"></i>Logout</button></a>
 
       </div>
 
@@ -172,7 +172,7 @@
         <button type="button" class="btn btn-outline-primary"><i class="fas fa-sync-alt"></i></button>
       </div>
       <div class="payment-address">
-        
+
       </div>
 
 
