--- a/views/home.ejs
+++ b/views/home.ejs
@@ -85,21 +85,32 @@
         <input type="checkbox" id="chk" aria-hidden="true">
 
         <div class="signup">
-          <form action = "/register" method="POST" >
+          <form action="/register" method="POST">
             <label for="chk" aria-hidden="true" class="login-label">Sign up</label>
             <input type="email" name="username" placeholder="Email" required="" class="login-input">
             <input type="password" name="password" placeholder="Password" required="" class="login-input">
             <button type="submit" class="hover-button">Sign up</button>
           </form>
+          <div class="container-fluid" style= "margin-top: 2rem;line-height:3;text-align:center">
+            <a href="/auth/outlook" class="btn btn-primary btn-md " ><img src="https://img.icons8.com/color/24/000000/microsoft-outlook-2019--v2.png"/ > &nbsp Sign in with <b><Outlook></Outlook></b></a>
+            <a href="/auth/github" class="btn btn-dark btn-md"><i class="fab fa-github"></i> &nbspSign up with <b>Github</b></a>
+            <a  class="btn btn-danger btn-md" href="/auth/google" role = "button"><i class="fab fa-google"></i> &nbsp Sign up with <b>Google</b></a>
+          </div>
         </div>
 
         <div class="login">
-          <form action = "/login" method = "POST">
+          <form action="/login" method="POST">
             <label for="chk" aria-hidden="true" class="login-label">Login</label>
             <input type="email" name="username" placeholder="Email" required="" class="login-input">
             <input type="password" name="password" placeholder="Password" required="" class="login-input">
             <button type="submit" class="hover-button">Login</button>
           </form>
+          <div class="container-fluid" style= "line-height:3">
+            <a href="/auth/outlook" class="btn btn-outline-primary btn-block " ><img src="https://img.icons8.com/color/24/000000/microsoft-outlook-2019--v2.png"/ > &nbsp Sign in with <b>Outlook</b></a>
+            <a href="/auth/github" class="btn btn-outline-dark btn-block"><i class="fab fa-github"></i>&nbspSign in with <b>Github</b></a>
+            <a href="/auth/google" class="btn btn-outline-danger btn-block"><i class="fab fa-google"></i> &nbsp Sign in with <b>Google</b></a>
+          </div>
+
         </div>
       </div>
     </div>
@@ -109,7 +120,7 @@
 
 
       <div class="row">
-        <div class="col-sm-12 col-md-6" >
+        <div class="col-sm-12 col-md-6">
           <div class="square">
             <span class="section-span1"></span>
             <span class="section-span2"></span>
