--- a/views/product.ejs
+++ b/views/product.ejs
@@ -47,7 +47,7 @@
 
       <div class="col-lg-2" style="z-index:1;>
           <a href=" #" style="z-index:1;margin-top:2rem;"><button type="button" class="btn1 nav-btn"><i class="fas fa-shopping-cart " style="margin-right:10px"></i>Cart</button></a>
-          <a href=" #" style="z-index:1;margin-top:2rem;"><button type="button" class="btn1 nav-btn"><i class="fas fa-sign-out-alt" style="margin-right:10px"></i>Logout</button></a>
+          <a href=" /logout" style="z-index:1;margin-top:2rem;"><button type="button" class="btn1 nav-btn"><i class="fas fa-sign-out-alt" style="margin-right:10px"></i>Logout</button></a>
 
       </div>
 
@@ -308,7 +308,9 @@
                 <img src="<%= grocery_array[i].images[0]%>" alt="" width="240" style="object-fit:contain;height:16rem">
               </div>
               <div class="content">
-                <a href="" value = "" style="position:absolute;left:1rem;bottom:1.5rem">more</a>
+                <form action="/item" method="post">
+                  <button name = "product_name" value = "<%= grocery_array[i].name %>" type="submit" style="position:absolute;left:1rem;bottom:1.5rem">more</button>
+                </form>
                 <span style="position:absolute;right:1rem;bottom:1.5rem">
                   <h4 style="display:inline">₹<%= grocery_array[i].final_price%></h4> <del>
                     <h5 style="display:inline">₹<%= grocery_array[i].Actual_price%></h5>
