--- a/views/home.ejs
+++ b/views/home.ejs
@@ -93,7 +93,7 @@
             <button type="submit" class="hover-button">Sign up</button>
           </form>
           <div class="container-fluid" style= "margin-top: 2rem;line-height:3;text-align:center">
-            <a href="/auth/outlook" class="btn btn-primary btn-md " ><img src="https://img.icons8.com/color/24/000000/microsoft-outlook-2019--v2.png"/ > &nbsp Sign in with <b><Outlook></Outlook></b></a>
+            <a href="/auth/outlook" class="btn btn-primary btn-md " ><img src="https://img.icons8.com/color/24/000000/microsoft-outlook-2019--v2.png"/ > &nbsp Sign in with <b>Outlook</b></a>
             <a href="/auth/github" class="btn btn-dark btn-md"><i class="fab fa-github"></i> &nbspSign up with <b>Github</b></a>
             <a  class="btn btn-danger btn-md" href="/auth/google" role = "button"><i class="fab fa-google"></i> &nbsp Sign up with <b>Google</b></a>
           </div>
