--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -21,7 +21,7 @@
           Contact Us
         </div>
         <div class="col">
-          <form action="/payment" method="post" target="myFrame" id="myForm">Payments</form>
+          <form href = "/payment" >Payments</form>
         </div>
         <div class="col">
           Return Policy
