--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -21,7 +21,7 @@
           Contact Us
         </div>
         <div class="col">
-          <form href = "/payment" >Payments</form>
+          <a href = "/payment" >Payments</a>
         </div>
         <div class="col">
           Return Policy
