--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -21,7 +21,7 @@
           Contact Us
         </div>
         <div class="col">
-          <a href = "/payment" >Payments</a>
+          <a href = "/payment" style = "color:white">Payments</a>
         </div>
         <div class="col">
           Return Policy
