--- a/views/item.ejs
+++ b/views/item.ejs
@@ -283,7 +283,7 @@
                 <div class="_3WHvuP">
                   <ul>
                     <% for(let i = 0; i < product_details[0].Highlights.length;i++) {%>
-                    <li class="_2-riNZ">product_details[0].Highlights[i]</li>
+                    <li class="_2-riNZ"><%=product_details[0].Highlights[i]%></li>
                     <%}%>
                   </ul>
                 </div>
