--- a/views/item.ejs
+++ b/views/item.ejs
@@ -67,9 +67,28 @@
       </button>
       <div class="collapse navbar-collapse ml-auto" id="navbarNavDropdown" style="text-align:center;justify-content:center;align-items:center;padding-bottom:2rem;">
         <ul class="navbar-nav" style="line-height:3">
-          <li class="nav-item dropdown" style="padding-right:2rem;">
+          <li class="nav-item dropdown" style="padding-right:1rem;">
             <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
-              Electronics
+              Staples
+            </button>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
+              <form action="/product" id = "item" method="post">
+                <button class="dropdown-item" name = "name" value="Dal#0" type="submit">Dals</button>
+                <button class="dropdown-item" name = "name" value="Oil#0" type="submit">Oils</button>
+                <button class="dropdown-item" name = "name" value="Flour#0" type="submit">Flours</button>
+                <button class="dropdown-item" name = "name" value="Soya#0" type="submit">Soya</button>
+                <button class="dropdown-item" name = "name" value="Ghee#0" type="submit">Ghee</button>
+                <button class="dropdown-item" name = "name" value="Spices#0" type="submit">Spices</button>
+                <button class="dropdown-item" name = "name" value="Masala#0" type="submit">Masalas</button>
+                <button class="dropdown-item" name = "name" value="Rice#0" type="submit">Rice</button>
+                <button class="dropdown-item" name = "name" value="Groundnut#0" type="submit">Groundnut</button>
+                <button class="dropdown-item" name = "name" value="Atta#0" type="submit">Atta</button>
+              </form>
+            </div>
+          </li>
+          <li class="nav-item dropdown" style="padding-right:1rem;">
+            <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
+              Snacks & Beverages
             </button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
               <a class="dropdown-item" href="#">Action</a>
@@ -77,9 +96,9 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
-          <li class="nav-item dropdown" style="padding-right:2rem;">
+          <li class="nav-item dropdown" style="padding-right:1rem;">
             <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
-              TV & Appliances
+              Packaged Food
             </button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
               <a class="dropdown-item" href="#">Action</a>
@@ -87,39 +106,31 @@
               <a class="dropdown-item" href="#">Something else here</a>
             </div>
           </li>
-          <li class="nav-item dropdown" style="padding-right:2rem;">
+          <li class="nav-item dropdown" style="padding-right:1rem;">
             <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
-              Men
+              Personal & Baby Care
             </button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <button class="dropdown-item" name = "name" value="dal" type="submit">Dals</button>
+              <button class="dropdown-item" name = "name" type="Oils">Oils</button>
+              <button class="dropdown-item" name = "name" type="submit">Flours</button>
             </div>
           </li>
-          <li class="nav-item dropdown" style="padding-right:2rem;">
+          <li class="nav-item dropdown" style="padding-right:1rem;">
             <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
-              Women
+              Household Care
             </button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <form action="/item" id = "item" method="post">
+                <button class="dropdown-item" name = "name" value="Shampoo" type="submit">Dals</button>
+                <button class="dropdown-item" name = "name" type="" type="submit">Oils</button>
+                <button class="dropdown-item" name = "name" type="submit" type="submit">Flours</button>
+              </form>
             </div>
           </li>
-          <li class="nav-item dropdown" style="padding-right:2rem;">
+          <li class="nav-item dropdown" style="padding-right:1rem;">
             <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
-              Baby & Kids
-            </button>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
-          </li>
-          <li class="nav-item dropdown" style="padding-right:2rem;">
-            <button class="btn btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="color:white">
-              Home & Furniture
+              Dairy & Eggs
             </button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
               <a class="dropdown-item" href="#">Action</a>
