--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -61,10 +61,17 @@
               Staples
             </button>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#feceab">
-              <form action="/product" id="item" method="post">
-                <button class="dropdown-item" name="name" value="dal" type="submit">Dals</button>
-                <button class="dropdown-item" name="name" value="Oil" type="submit">Oils</button>
-                <button class="dropdown-item" name="name" value="Flour" type="submit">Flours</button>
+              <form action="/product" id = "item" method="post">
+                <button class="dropdown-item" name = "name" value="Dal#0" type="submit">Dals</button>
+                <button class="dropdown-item" name = "name" value="Oil#0" type="submit">Oils</button>
+                <button class="dropdown-item" name = "name" value="Flour#0" type="submit">Flours</button>
+                <button class="dropdown-item" name = "name" value="Soya#0" type="submit">Soya</button>
+                <button class="dropdown-item" name = "name" value="Ghee#0" type="submit">Ghee</button>
+                <button class="dropdown-item" name = "name" value="Spices#0" type="submit">Spices</button>
+                <button class="dropdown-item" name = "name" value="Masala#0" type="submit">Masalas</button>
+                <button class="dropdown-item" name = "name" value="Rice#0" type="submit">Rice</button>
+                <button class="dropdown-item" name = "name" value="Groundnut#0" type="submit">Groundnut</button>
+                <button class="dropdown-item" name = "name" value="Atta#0" type="submit">Atta</button>
               </form>
             </div>
           </li>
