--- a/views/main.ejs
+++ b/views/main.ejs
@@ -104,6 +104,7 @@
                   <button class="dropdown-item" name = "name" value="Rice#0" type="submit">Rice</button>
                   <button class="dropdown-item" name = "name" value="Groundnut#0" type="submit">Groundnut</button>
                   <button class="dropdown-item" name = "name" value="Atta#0" type="submit">Atta</button>
+                  <button class="dropdown-item" name = "name" value="Salt#0" type="submit">Salt</button>
                 </form>
               </div>
             </li>
