--- a/views/item.ejs
+++ b/views/item.ejs
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="container name">
-            <a href="#"><img src="logo.jpeg" width=70px></a>
+            <a href="/main"><img src="logo.jpeg" width=70px></a>
             <span style="margin-left:2rem;">Dheeru's Kart</span>
           </div>
 
