--- a/views/payment.ejs
+++ b/views/payment.ejs
@@ -29,7 +29,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="name" style="float:left">
-            <a href="#"><img src="logo.jpeg" width=70px></a>
+            <a href="/main"><img src="logo.jpeg" width=70px></a>
             <span style="margin-left:2rem;">Dheeru's Kart</span>
           </div>
 
