--- a/views/product.ejs
+++ b/views/product.ejs
@@ -33,7 +33,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="name" style="float:left">
-            <a href="#"><img src="logo.jpeg" width=70px></a>
+            <a href="/main" type="button"><img src="logo.jpeg" width=70px></a>
             <span style="margin-left:2rem;">Dheeru's Kart</span>
           </div>
 
